service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 5678
