ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: jlr.china.dso.jlr-apps.com   # Replace with your DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-svc
                port:
                  number: 80
